fir/fir_parser.output
Terminals unused in grammar

    tPUBLIC
    tPRIVATE


State 197 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: declarations

    2 declarations: declaration
    3             | declarations declaration

    4 declaration: vardec ';'
    5            | fundec
    6            | fundef

    7 vardecs: vardec ';'
    8        | vardecs vardec ';'

    9 opt_vardecs: %empty
   10            | vardecs

   11 vardec: data_type '?' tIDENTIFIER
   12       | data_type '*' tIDENTIFIER opt_initializer
   13       | data_type tIDENTIFIER opt_initializer

   14 data_type: tTYPE_STRING
   15          | tTYPE_INT
   16          | tTYPE_FLOAT
   17          | '<' data_type '>'

   18 opt_initializer: %empty
   19                | '=' expression

   20 fundec: data_type tIDENTIFIER '(' argdecs ')'
   21       | data_type '?' tIDENTIFIER '(' argdecs ')'
   22       | data_type '*' tIDENTIFIER '(' argdecs ')'
   23       | tTYPE_VOID tIDENTIFIER '(' argdecs ')'
   24       | tTYPE_VOID '?' tIDENTIFIER '(' argdecs ')'
   25       | tTYPE_VOID '*' tIDENTIFIER '(' argdecs ')'

   26 fundef: data_type tIDENTIFIER '(' argdecs ')' tARROW literal body
   27       | data_type '*' tIDENTIFIER '(' argdecs ')' tARROW literal body
   28       | tTYPE_VOID tIDENTIFIER '(' argdecs ')' body
   29       | tTYPE_VOID '*' tIDENTIFIER '(' argdecs ')' body
   30       | data_type tIDENTIFIER '(' argdecs ')' body
   31       | data_type '*' tIDENTIFIER '(' argdecs ')' body

   32 argdecs: %empty
   33        | argdec
   34        | argdecs ',' argdec

   35 argdec: data_type tIDENTIFIER

   36 literal: integer
   37        | float
   38        | string
   39        | null

   40 body: '@' block
   41     | block
   42     | tEPILOGUE block
   43     | '@' block block
   44     | '@' block tEPILOGUE block
   45     | block tEPILOGUE block
   46     | '@' block block tEPILOGUE block

   47 block: '{' opt_vardecs opt_instructions '}'

   48 instructions: instruction
   49             | instructions instruction

   50 opt_instructions: %empty
   51                 | instructions

   52 instruction: tIF expression tTHEN instruction
   53            | tIF expression tTHEN instruction tELSE instruction
   54            | tWHILE expression tDO instruction
   55            | tWHILE expression tDO instruction tFINALLY instruction
   56            | block
   57            | tRETURN
   58            | tRESTART ';'
   59            | tRESTART tINTEGER ';'
   60            | tLEAVE ';'
   61            | tLEAVE tINTEGER ';'
   62            | tWRITE expressions ';'
   63            | tWRITELN expressions ';'
   64            | expression ';'

   65 expressions: expression
   66            | expressions ',' expression

   67 opt_expressions: %empty
   68                | expressions

   69 expression: integer
   70           | float
   71           | string
   72           | null
   73           | lvalue
   74           | lvalue '=' expression
   75           | expression '+' expression
   76           | expression '-' expression
   77           | expression '*' expression
   78           | expression '/' expression
   79           | expression '%' expression
   80           | expression '<' expression
   81           | expression tLE expression
   82           | expression tEQ expression
   83           | expression tGE expression
   84           | expression '>' expression
   85           | expression tNE expression
   86           | expression tOR expression
   87           | expression tAND expression
   88           | '+' expression
   89           | '-' expression
   90           | '~' expression
   91           | '@'
   92           | tIDENTIFIER '(' opt_expressions ')'
   93           | tSIZEOF '(' expression ')'
   94           | '[' expression ']'
   95           | '(' expression ')'
   96           | lvalue '?'

   97 lvalue: tIDENTIFIER
   98       | lvalue '[' expression ']'
   99       | '(' expression ')' '[' expression ']'
  100       | tIDENTIFIER '(' opt_expressions ')' '[' expression ']'

  101 integer: tINTEGER

  102 float: tFLOAT

  103 null: tNULL

  104 string: tSTRING
  105       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 79
    '(' (40) 20 21 22 23 24 25 26 27 28 29 30 31 92 93 95 99 100
    ')' (41) 20 21 22 23 24 25 26 27 28 29 30 31 92 93 95 99 100
    '*' (42) 12 22 25 27 29 31 77
    '+' (43) 75 88
    ',' (44) 34 66
    '-' (45) 76 89
    '/' (47) 78
    ';' (59) 4 7 8 58 59 60 61 62 63 64
    '<' (60) 17 80
    '=' (61) 19 74
    '>' (62) 17 84
    '?' (63) 11 21 24 96
    '@' (64) 40 43 44 46 91
    '[' (91) 94 98 99 100
    ']' (93) 94 98 99 100
    '{' (123) 47
    '}' (125) 47
    '~' (126) 90
    error (256)
    tTYPE_INT (258) 15
    tTYPE_FLOAT (259) 16
    tTYPE_STRING (260) 14
    tTYPE_VOID (261) 23 24 25 28 29
    tSIZEOF (262) 93
    tIF (263) 52 53
    tTHEN (264) 52 53
    tELSE (265) 53
    tWHILE (266) 54 55
    tDO (267) 54 55
    tFINALLY (268) 55
    tLEAVE (269) 60 61
    tRESTART (270) 58 59
    tGE (271) 83
    tLE (272) 81
    tEQ (273) 82
    tNE (274) 85
    tAND (275) 87
    tOR (276) 86
    tRETURN (277) 57
    tWRITE (278) 62
    tWRITELN (279) 63
    tARROW (280) 26 27
    tEPILOGUE (281) 42 44 45 46
    tPUBLIC (282)
    tPRIVATE (283)
    tINTEGER <i> (284) 59 61 101
    tFLOAT <d> (285) 102
    tSTRING <s> (286) 104 105
    tIDENTIFIER <s> (287) 11 12 13 20 21 22 23 24 25 26 27 28 29 30 31 35 92 97 100
    tNULL <expression> (288) 103
    tUMINUS (289)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    file <sequence> (55)
        on left: 1
        on right: 0
    declarations <sequence> (56)
        on left: 2 3
        on right: 1 3
    declaration <node> (57)
        on left: 4 5 6
        on right: 2 3
    vardecs <sequence> (58)
        on left: 7 8
        on right: 8 10
    opt_vardecs <sequence> (59)
        on left: 9 10
        on right: 47
    vardec <node> (60)
        on left: 11 12 13
        on right: 4 7 8
    data_type <type> (61)
        on left: 14 15 16 17
        on right: 11 12 13 17 20 21 22 26 27 30 31 35
    opt_initializer <expression> (62)
        on left: 18 19
        on right: 12 13
    fundec <node> (63)
        on left: 20 21 22 23 24 25
        on right: 5
    fundef <node> (64)
        on left: 26 27 28 29 30 31
        on right: 6
    argdecs <sequence> (65)
        on left: 32 33 34
        on right: 20 21 22 23 24 25 26 27 28 29 30 31 34
    argdec <node> (66)
        on left: 35
        on right: 33 34
    literal <expression> (67)
        on left: 36 37 38 39
        on right: 26 27
    body <b> (68)
        on left: 40 41 42 43 44 45 46
        on right: 26 27 28 29 30 31
    block <block> (69)
        on left: 47
        on right: 40 41 42 43 44 45 46 56
    instructions <sequence> (70)
        on left: 48 49
        on right: 49 51
    opt_instructions <sequence> (71)
        on left: 50 51
        on right: 47
    instruction <node> (72)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 48 49 52 53 54 55
    expressions <sequence> (73)
        on left: 65 66
        on right: 62 63 66 68
    opt_expressions <sequence> (74)
        on left: 67 68
        on right: 92 100
    expression <expression> (75)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
        on right: 19 52 53 54 55 64 65 66 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 93 94 95 98 99 100
    lvalue <lvalue> (76)
        on left: 97 98 99 100
        on right: 73 74 96 98
    integer <expression> (77)
        on left: 101
        on right: 36 69
    float <expression> (78)
        on left: 102
        on right: 37 70
    null <expression> (79)
        on left: 103
        on right: 39 72
    string <s> (80)
        on left: 104 105
        on right: 38 71 105


State 0

    0 $accept: . file $end

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    file          go to state 6
    declarations  go to state 7
    declaration   go to state 8
    vardec        go to state 9
    data_type     go to state 10
    fundec        go to state 11
    fundef        go to state 12


State 1

   15 data_type: tTYPE_INT .

    $default  reduce using rule 15 (data_type)


State 2

   16 data_type: tTYPE_FLOAT .

    $default  reduce using rule 16 (data_type)


State 3

   14 data_type: tTYPE_STRING .

    $default  reduce using rule 14 (data_type)


State 4

   23 fundec: tTYPE_VOID . tIDENTIFIER '(' argdecs ')'
   24       | tTYPE_VOID . '?' tIDENTIFIER '(' argdecs ')'
   25       | tTYPE_VOID . '*' tIDENTIFIER '(' argdecs ')'
   28 fundef: tTYPE_VOID . tIDENTIFIER '(' argdecs ')' body
   29       | tTYPE_VOID . '*' tIDENTIFIER '(' argdecs ')' body

    tIDENTIFIER  shift, and go to state 13
    '*'          shift, and go to state 14
    '?'          shift, and go to state 15


State 5

   17 data_type: '<' . data_type '>'

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    data_type  go to state 16


State 6

    0 $accept: file . $end

    $end  shift, and go to state 17


State 7

    1 file: declarations .
    3 declarations: declarations . declaration

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    $default  reduce using rule 1 (file)

    declaration  go to state 18
    vardec       go to state 9
    data_type    go to state 10
    fundec       go to state 11
    fundef       go to state 12


State 8

    2 declarations: declaration .

    $default  reduce using rule 2 (declarations)


State 9

    4 declaration: vardec . ';'

    ';'  shift, and go to state 19


State 10

   11 vardec: data_type . '?' tIDENTIFIER
   12       | data_type . '*' tIDENTIFIER opt_initializer
   13       | data_type . tIDENTIFIER opt_initializer
   20 fundec: data_type . tIDENTIFIER '(' argdecs ')'
   21       | data_type . '?' tIDENTIFIER '(' argdecs ')'
   22       | data_type . '*' tIDENTIFIER '(' argdecs ')'
   26 fundef: data_type . tIDENTIFIER '(' argdecs ')' tARROW literal body
   27       | data_type . '*' tIDENTIFIER '(' argdecs ')' tARROW literal body
   30       | data_type . tIDENTIFIER '(' argdecs ')' body
   31       | data_type . '*' tIDENTIFIER '(' argdecs ')' body

    tIDENTIFIER  shift, and go to state 20
    '*'          shift, and go to state 21
    '?'          shift, and go to state 22


State 11

    5 declaration: fundec .

    $default  reduce using rule 5 (declaration)


State 12

    6 declaration: fundef .

    $default  reduce using rule 6 (declaration)


State 13

   23 fundec: tTYPE_VOID tIDENTIFIER . '(' argdecs ')'
   28 fundef: tTYPE_VOID tIDENTIFIER . '(' argdecs ')' body

    '('  shift, and go to state 23


State 14

   25 fundec: tTYPE_VOID '*' . tIDENTIFIER '(' argdecs ')'
   29 fundef: tTYPE_VOID '*' . tIDENTIFIER '(' argdecs ')' body

    tIDENTIFIER  shift, and go to state 24


State 15

   24 fundec: tTYPE_VOID '?' . tIDENTIFIER '(' argdecs ')'

    tIDENTIFIER  shift, and go to state 25


State 16

   17 data_type: '<' data_type . '>'

    '>'  shift, and go to state 26


State 17

    0 $accept: file $end .

    $default  accept


State 18

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 19

    4 declaration: vardec ';' .

    $default  reduce using rule 4 (declaration)


State 20

   13 vardec: data_type tIDENTIFIER . opt_initializer
   20 fundec: data_type tIDENTIFIER . '(' argdecs ')'
   26 fundef: data_type tIDENTIFIER . '(' argdecs ')' tARROW literal body
   30       | data_type tIDENTIFIER . '(' argdecs ')' body

    '='  shift, and go to state 27
    '('  shift, and go to state 28

    $default  reduce using rule 18 (opt_initializer)

    opt_initializer  go to state 29


State 21

   12 vardec: data_type '*' . tIDENTIFIER opt_initializer
   22 fundec: data_type '*' . tIDENTIFIER '(' argdecs ')'
   27 fundef: data_type '*' . tIDENTIFIER '(' argdecs ')' tARROW literal body
   31       | data_type '*' . tIDENTIFIER '(' argdecs ')' body

    tIDENTIFIER  shift, and go to state 30


State 22

   11 vardec: data_type '?' . tIDENTIFIER
   21 fundec: data_type '?' . tIDENTIFIER '(' argdecs ')'

    tIDENTIFIER  shift, and go to state 31


State 23

   23 fundec: tTYPE_VOID tIDENTIFIER '(' . argdecs ')'
   28 fundef: tTYPE_VOID tIDENTIFIER '(' . argdecs ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 32 (argdecs)

    data_type  go to state 32
    argdecs    go to state 33
    argdec     go to state 34


State 24

   25 fundec: tTYPE_VOID '*' tIDENTIFIER . '(' argdecs ')'
   29 fundef: tTYPE_VOID '*' tIDENTIFIER . '(' argdecs ')' body

    '('  shift, and go to state 35


State 25

   24 fundec: tTYPE_VOID '?' tIDENTIFIER . '(' argdecs ')'

    '('  shift, and go to state 36


State 26

   17 data_type: '<' data_type '>' .

    $default  reduce using rule 17 (data_type)


State 27

   19 opt_initializer: '=' . expression

    tSIZEOF      shift, and go to state 37
    tINTEGER     shift, and go to state 38
    tFLOAT       shift, and go to state 39
    tSTRING      shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNULL        shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '@'          shift, and go to state 47
    '['          shift, and go to state 48

    expression  go to state 49
    lvalue      go to state 50
    integer     go to state 51
    float       go to state 52
    null        go to state 53
    string      go to state 54


State 28

   20 fundec: data_type tIDENTIFIER '(' . argdecs ')'
   26 fundef: data_type tIDENTIFIER '(' . argdecs ')' tARROW literal body
   30       | data_type tIDENTIFIER '(' . argdecs ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 32 (argdecs)

    data_type  go to state 32
    argdecs    go to state 55
    argdec     go to state 34


State 29

   13 vardec: data_type tIDENTIFIER opt_initializer .

    $default  reduce using rule 13 (vardec)


State 30

   12 vardec: data_type '*' tIDENTIFIER . opt_initializer
   22 fundec: data_type '*' tIDENTIFIER . '(' argdecs ')'
   27 fundef: data_type '*' tIDENTIFIER . '(' argdecs ')' tARROW literal body
   31       | data_type '*' tIDENTIFIER . '(' argdecs ')' body

    '='  shift, and go to state 27
    '('  shift, and go to state 56

    $default  reduce using rule 18 (opt_initializer)

    opt_initializer  go to state 57


State 31

   11 vardec: data_type '?' tIDENTIFIER .
   21 fundec: data_type '?' tIDENTIFIER . '(' argdecs ')'

    '('  shift, and go to state 58

    $default  reduce using rule 11 (vardec)


State 32

   35 argdec: data_type . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 59


State 33

   23 fundec: tTYPE_VOID tIDENTIFIER '(' argdecs . ')'
   28 fundef: tTYPE_VOID tIDENTIFIER '(' argdecs . ')' body
   34 argdecs: argdecs . ',' argdec

    ')'  shift, and go to state 60
    ','  shift, and go to state 61


State 34

   33 argdecs: argdec .

    $default  reduce using rule 33 (argdecs)


State 35

   25 fundec: tTYPE_VOID '*' tIDENTIFIER '(' . argdecs ')'
   29 fundef: tTYPE_VOID '*' tIDENTIFIER '(' . argdecs ')' body

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 32 (argdecs)

    data_type  go to state 32
    argdecs    go to state 62
    argdec     go to state 34


State 36

   24 fundec: tTYPE_VOID '?' tIDENTIFIER '(' . argdecs ')'

    tTYPE_INT     shift, and go to state 1
    tTYPE_FLOAT   shift, and go to state 2
    tTYPE_STRING  shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 32 (argdecs)

    data_type  go to state 32
    argdecs    go to state 63
    argdec     go to state 34


State 37

   93 expression: tSIZEOF . '(' expression ')'

    '('  shift, and go to state 64


State 38

  101 integer: tINTEGER .

    $default  reduce using rule 101 (integer)


State 39

  102 float: tFLOAT .

    $default  reduce using rule 102 (float)


State 40

  104 string: tSTRING .

    $default  reduce using rule 104 (string)


State 41

   92 expression: tIDENTIFIER . '(' opt_expressions ')'
   97 lvalue: tIDENTIFIER .
  100       | tIDENTIFIER . '(' opt_expressions ')' '[' expression ']'

    '('  shift, and go to state 65

    $default  reduce using rule 97 (lvalue)


State 42

  103 null: tNULL .

    $default  reduce using rule 103 (null)


State 43

   90 expression: '~' . expression

    tSIZEOF      shift, and go to state 37
    tINTEGER     shift, and go to state 38
    tFLOAT       shift, and go to state 39
    tSTRING      shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNULL        shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '@'          shift, and go to state 47
    '['          shift, and go to state 48

    expression  go to state 66
    lvalue      go to state 50
    integer     go to state 51
    float       go to state 52
    null        go to state 53
    string      go to state 54


State 44

   88 expression: '+' . expression

    tSIZEOF      shift, and go to state 37
    tINTEGER     shift, and go to state 38
    tFLOAT       shift, and go to state 39
    tSTRING      shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNULL        shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '@'          shift, and go to state 47
    '['          shift, and go to state 48

    expression  go to state 67
    lvalue      go to state 50
    integer     go to state 51
    float       go to state 52
    null        go to state 53
    string      go to state 54


State 45

   89 expression: '-' . expression

    tSIZEOF      shift, and go to state 37
    tINTEGER     shift, and go to state 38
    tFLOAT       shift, and go to state 39
    tSTRING      shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNULL        shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '@'          shift, and go to state 47
    '['          shift, and go to state 48

    expression  go to state 68
    lvalue      go to state 50
    integer     go to state 51
    float       go to state 52
    null        go to state 53
    string      go to state 54


State 46

   95 expression: '(' . expression ')'
   99 lvalue: '(' . expression ')' '[' expression ']'

    tSIZEOF      shift, and go to state 37
    tINTEGER     shift, and go to state 38
    tFLOAT       shift, and go to state 39
    tSTRING      shift, and go to state 40
    tIDENTIFIER  shift, and go to state 41
    tNULL        shift, and go to state 42
    '~'          shift, and go to state 43
    '+'          shift, and go to state 44
    '-'          shift, and go to state 45
    '('          shift, and go to state 46
    '@'          shift, and go to state 47
    '['          shift, and go to state 48

    expression  go to state 69
    lvalue      go to state 50
    integer     go to state 51
    float       go to state 52
    null        go to state 53
    string      go to state 54


State 47

   91 expression: '@' .

    $default  reduce using rule 91 (expression)


State 48

   94 expression: '[' . expression ']'
